feat: constantly stream video